move progress text to progressbar label and keep dir info separate. eliminate gap between file entries in fileman to avoid holes without context menu
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@2642 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/css/jquery-ui-theme.custom.css
+++ b/mig/images/css/jquery-ui-theme.custom.css
@@ -36,8 +36,8 @@
 
 
 #fm_filemanager .ui-progressbar-value {
-    /* progres floats underneath frame if margin is not negative */
-    margin-top: -18px;
+    /* progres floats underneath frame if margin is not negative - value depends on font size */
+    margin-top: -16px;
     /* not sure this is needed */
     vertical-align: middle;
     /* look and feel */
