--- a/mig/images/css/jquery.managers.css
+++ b/mig/images/css/jquery.managers.css
@@ -50,6 +50,8 @@
   border: 0;
   padding: 0;
   background-color: #fff;
+  /* no space between elements - to avoid gap without context menu */
+  border-spacing: 0px;
 }
 #fm_filemanager thead, #jm_jobmanager thead {
   background-color: #eee;
@@ -77,7 +79,7 @@
 
 #jm_jobmanager tbody tr td div.sortkey { display: none; }
 
-#fm_filelisting td, th { padding: 4px; background-position: 2px 50%; }
+#fm_filelisting td, th { padding: 6px; background-position: 2px 50%; }
 #jm_jobmanager td, th { padding: 4px; background-position: 2px 50%; }
 
 #fm_filelisting .tablesorter-header, #jm_jobmanager .tablesorter-header { 
@@ -127,13 +129,13 @@
   border-bottom: 0;
   background-color: white;
   
-  overflow:scroll;
+  overflow: scroll;
   height: 500px;
   
 }
 .fm_files {
-  float:right;
-  width:74%;
+  float: right;
+  width: 74%;
   padding: 0;
   border: 1px solid grey;
   border-bottom: 0;
@@ -182,12 +184,12 @@
   background-position: 5px 50%;
   background: none;
   
-  border:1px solid darkgrey;
+  border: 1px solid darkgrey;
   color: black;
-  font-size:12px;
-  font-weight:bold;
-  padding:3px 9px 3px 9px;
-  text-decoration:none;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 3px 9px 3px 9px;
+  text-decoration: none;
   background-color: #ccc;
 
   margin-right: 10px;
@@ -202,15 +204,15 @@
   background-image: url('/images/icons/folder.png');
 }
 .fm_toolbar ul li input {
-  border:1px solid #999999;
-  display:inline;
-  padding:2px 4px;
+  border: 1px solid #999999;
+  display: inline;
+  padding: 2px 4px;
   width: 80%;
 }
 /* statusbar with info left and progress right */
 #fm_statusbar {
   clear: both;
-  padding: 5px 5px;
+  padding: 2px;
   border: 0;
   border-top: 1px solid #ccc;  
   background-color: #eee;
@@ -220,7 +222,16 @@
     padding: 0;
     float: left;
     width: 25%;
-    height: 16px;
+    height: 14px;
+}
+#fm_statusprogress .progress-label {
+    width: 100%;
+    left: 0px;
+    right: 0px;
+    text-align: center;
+    text-shadow: 1px 1px 0 #fff;
+    font-size: 12px;
+    font-weight: bold; 
 }
 #fm_statusinfo {
     padding: 0;
@@ -442,6 +453,7 @@ background: url(/images/icons/picture.png) left center no-repeat;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    margin: 0;
 }
 
 
